Implement agent reuse, toggled by a cluster profile config option